[package]
name = "rustgame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }

# https://bevyengine.org/learn/quick-start/getting-started/setup/#improve-runtime-performance-optional
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
